* verbose argument in function ggmap now deprecated, use messaging
* center argument in function ggmap now deprecated, use location
* the ggmap function has been totally overhauled.  it is no longer based on the RgoogleMaps functions GetMap and GetMap.OSM but on functions get_googlemap, get_openstreetmap, get_stamenmap, and get_cloudmademap.  

FUNCTION NAME CHANGES

* the function called ggmap in previous versions is now called get_map.
* the function called ggmapplot in previous versions is now called ggmap.  the new ggmap function checks its arguments and then either 1. proceeds with generating a ggplot2 object or 2. errors suggesting the use of get_map.

FIXES

* bug was fixed which on some platforms caused an error in readPNG.
* mapdist now properly handles many from queries without exceeding google's distance matrix api uri limits.  note that the api may still reject large queries - you may want to run mapdist in a for loop.

NEW DEPENDS/IMPORTS/SUGGESTS

* ggmap no longer imports ReadImages.
* ggmap now suggests stringr.

OTHER ADDITIONS

* a new data set on wind from hurricane ike.




Version 1.3
-------------------------------------------------------------------------

New Features -
  1. a total overhaul of the geocode function (with backwards compatability).  geocode can now return more information such as the address (for when the location is lazy-specified, e.g. "the white house"), a bounding box, and political administrative bodies.
  2. revgeocode - a reverse geocoder using google maps.
  3. mapdist - a function to compute distances on maps using the google maps api.  distances in meters, km, and miles are returned as well as travel times in seconds, minutes and hours based on mode of transportation (driving, bicycling, or walking).  google query limit monitored with function distQueryCheck.
  4. route - a function to grab directions from google.  google query limit monitored with function routeQueryCheck. several options are available.