@@ -11,6 +11,8 @@ export(ggimage)
 export(gglocator)
 export(ggmap)
 export(ggmapplot)
+export(inset_raster)
+export(inset)
 export(legs2route)
 export(LonLat2XY)
 export(make_bbox)
