@@ -1,8 +1,8 @@
 #' Quick map plot
 #'
-#' \code{qmplot} is a knock-off of the ggplot2 function qplot for the 
-#' quick plotting of maps with data.  qmplot is still in its experimental
-#' stages.
+#' \code{qmplot} is the ggmap equivalent to the ggplot2 function qplot and allows for 
+#' the quick plotting of maps with data/models/etc.  qmplot is still experimental.
+#' 
 #' 
 #' @param x longitude values
 #' @param y latitude values
